Revise index.html for new layout and content

--- a/index.html
+++ b/index.html
@@ -1,83 +1,293 @@
-<!DOCTYPE html><html lang="id">
+<!DOCTYPE html>
+<html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">  <title>JB Mobile Legend Terpercaya – Yamzz Markets</title>  <meta name="description" content="JB Mobile Legend terpercaya di Yamzz Markets. Jual beli akun Mobile Legends, jasa joki ML, dan rekber aman & cepat.">
-  <meta name="keywords" content="JB Mobile Legend, JB ML terpercaya, jual akun ML, joki Mobile Legend, Yamzz Markets">
-  <meta name="author" content="Yamzz Markets">  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Organization",
-    "name": "Yamzz Markets",
-    "description": "JB Mobile Legend terpercaya, jual beli akun ML, jasa joki, dan rekber aman.",
-    "url": "https://link-kamu.com"
-  }
-  </script>  <style>
-    body{
-      margin:0;
-      font-family:Arial, sans-serif;
-      background:#0b1220;
-      color:#e5e7eb;
-      line-height:1.8;
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Juragan Taps – Admin Free Fire & Grup</title>
+
+<style>
+html, body{
+    height:100%;
+    margin:0;
+}
+*{
+    box-sizing:border-box;
+    font-family:'Poppins', sans-serif;
+}
+body{
+    background:radial-gradient(circle at top, #1a1f3c, #05070f);
+    color:#fff;
+}
+
+.page{
+    min-height:100vh;
+    display:flex;
+    flex-direction:column;
+}
+
+.container{
+    flex:1;
+    padding:0 16px;
+}
+
+/* ================= HEADER ================= */
+.header{
+    position:relative;
+    background:linear-gradient(90deg,#3b5cff,#8a4dff);
+    padding:18px 18px 18px 130px;
+    border-bottom-left-radius:28px;
+    border-bottom-right-radius:28px;
+    display:flex;
+    align-items:center;
+}
+
+.logo{
+    position:absolute;
+    left:16px;
+    top:70%;
+    transform:translateY(-50%);
+    width:100px;
+    z-index:5;
+    filter:drop-shadow(0 6px 10px rgba(0,0,0,0.6));
+}
+
+.header-text h1{
+    font-size:17px;
+    margin:0;
+}
+.header-text p{
+    margin:0;
+    font-size:12px;
+    opacity:0.9;
+}
+
+/* ================= TITLE ================= */
+.title{
+    text-align:center;
+    margin:22px 0 16px;
+    font-size:22px;
+    font-weight:700;
+}
+
+/* ================= MENU ================= */
+.menu{
+    display:flex;
+    flex-direction:column;
+    gap:14px;
+}
+
+/* ================= CARD ================= */
+.card{
+    position:relative;
+    overflow:hidden;
+    background:
+        linear-gradient(90deg, rgba(42,60,255,0.85), rgba(111,44,255,0.85)),
+        url("profil.jpg");
+    background-size:cover;
+    background-position:center;
+    border-radius:40px;
+    padding:14px 16px;
+    display:flex;
+    align-items:center;
+    justify-content:space-between;
+    box-shadow:0 0 15px rgba(111,44,255,0.4);
+    transition:transform .2s ease, box-shadow .2s ease;
+}
+.card:hover{
+    transform:scale(1.02);
+    box-shadow:0 0 22px rgba(140,90,255,0.7);
+}
+
+/* watermark logo */
+.card::after{
+    content:"";
+    position:absolute;
+    right:12px;
+    top:50%;
+    transform:translateY(-50%) rotate(-10deg);
+    width:90px;
+    height:90px;
+    background-size:contain;
+    opacity:0.15;
+    pointer-events:none;
+}
+
+.card-left{
+    display:flex;
+    align-items:center;
+    gap:12px;
+}
+.dot{
+    width:16px;
+    height:16px;
+    border-radius:50%;
+    background:#7bff4e;
+    box-shadow:0 0 8px #7bff4e;
+}
+.card span{
+    font-size:13px;
+    font-weight:600;
+}
+
+/* button */
+.btn{
+    background:#fff;
+    color:#000;
+    padding:8px 14px;
+    border-radius:20px;
+    font-size:12px;
+    font-weight:600;
+    text-decoration:none;
+}
+
+/* ================= FOOTER ================= */
+.footer-bar{
+    position:relative;
+    margin-top:60px;
+    padding:18px 16px;
+    background:linear-gradient(90deg,#3b5cff,#7a3cff);
+    border-top-left-radius:24px;
+    border-top-right-radius:24px;
+    display:flex;
+    align-items:center;
+    justify-content:space-between;
+    font-size:11px;
+    overflow:visible;
+}
+
+.footer-bar .maskot{
+    position:absolute;
+    right:12px;
+    top:-55px;
+    width:100px;
+    z-index:5;
+    filter:
+      drop-shadow(0 0 12px rgba(120,80,255,0.8))
+      drop-shadow(0 8px 12px rgba(0,0,0,0.6));
+}
+
+/* ================= RESPONSIVE ================= */
+@media(max-width:480px){
+    .logo{
+        width:80px;
     }
-    .container{
-      max-width:720px;
-      margin:auto;
-      padding:20px;
+    .header{
+        padding-left:110px;
     }
-    h1,h2,h3{color:#93c5fd}
-    h1{font-size:28px}
-    h2{font-size:22px;margin-top:28px}
-    h3{font-size:18px;margin-top:20px}
-    p{margin:12px 0}
-    a{color:#60a5fa;text-decoration:none}
-    .cta{
-      margin:30px 0;
-      padding:16px;
-      background:#102a44;
-      border-radius:12px;
-      text-align:center;
+    .card::after{
+        width:65px;
+        height:65px;
+        opacity:0.12;
     }
-    .cta a{
-      display:inline-block;
-      margin-top:10px;
-      padding:12px 22px;
-      background:#2563eb;
-      border-radius:8px;
-      color:#fff;
-      font-weight:bold;
+    .footer-bar .maskot{
+        width:65px;
+        top:-45px;
     }
-  </style></head><body>
-<div class="container"><h1>JB Mobile Legend Terpercaya – Yamzz Markets</h1><p>
-<strong>Yamzz Markets</strong> adalah tempat <strong>JB Mobile Legend terpercaya</strong> yang menyediakan layanan jual beli akun Mobile Legends, jasa joki ML, serta sistem rekber aman. Halaman ini dibuat untuk membantu pemain Mobile Legends menemukan layanan JB ML yang aman, cepat, dan transparan.
-</p><h2>Apa Itu JB Mobile Legend?</h2>
-<p>
-JB Mobile Legend adalah aktivitas jual beli akun Mobile Legends antara penjual dan pembeli. Proses ini membutuhkan kepercayaan tinggi karena melibatkan akun game. Oleh karena itu, Yamzz Markets hadir sebagai solusi JB ML terpercaya dengan admin resmi dan sistem transaksi yang aman.
-</p><h2>Kenapa Memilih Yamzz Markets?</h2>
-<ul>
-  <li>JB Mobile Legend terpercaya & berpengalaman</li>
-  <li>Admin responsif melalui WhatsApp</li>
-  <li>Bisa menggunakan sistem rekber</li>
-  <li>Stok akun Mobile Legends update</li>
-  <li>Tersedia jasa joki Mobile Legends</li>
-</ul><h2>Layanan Yamzz Markets</h2>
-<h3>1. Jual Beli Akun Mobile Legends</h3>
-<p>
-Yamzz Markets menyediakan berbagai akun Mobile Legends dengan rank, hero, dan skin beragam. Semua akun dicek sebelum dijual untuk memastikan keamanan.
-</p><h3>2. Jasa Joki Mobile Legends</h3>
-<p>
-Tersedia jasa joki Mobile Legends untuk push rank dengan proses cepat dan aman. Privasi akun dijaga dan dikerjakan oleh joki berpengalaman.
-</p><h3>3. Rekber Mobile Legends</h3>
-<p>
-Untuk keamanan transaksi, Yamzz Markets menyediakan layanan rekber agar pembeli dan penjual sama-sama aman saat melakukan JB Mobile Legend.
-</p><h2>Apakah JB Mobile Legend Aman?</h2>
-<p>
-JB Mobile Legend aman jika dilakukan melalui admin terpercaya dan sistem yang jelas. Yamzz Markets selalu menyarankan penggunaan rekber dan komunikasi melalui kontak resmi untuk menghindari penipuan.
-</p><div class="cta">
-  <h2>Kontak Resmi Yamzz Markets</h2>
-  <p>Untuk JB Mobile Legend, jasa joki, atau rekber, silakan hubungi admin resmi.</p>
-  <a href="index.html">Buka Halaman Utama Yamzz Markets</a>
-</div><p>
-<strong>Yamzz Markets</strong> berkomitmen menjadi <strong>JB Mobile Legend terpercaya</strong> yang mengutamakan keamanan, kejujuran, dan pelayanan terbaik untuk komunitas Mobile Legends.
-</p></div>
+}
+</style>
+</head>
+
+<body>
+
+<div class="page">
+
+    <!-- HEADER -->
+    <div class="header">
+        <img src="logo.png" class="logo" alt="Juragan Taps">
+        <div class="header-text">
+            <h1>Juragan Taps</h1>
+            <p>Kontak Admin & Grup Jual Beli Akun</p>
+        </div>
+    </div>
+
+    <!-- CONTENT -->
+    <div class="container">
+
+        <div class="title">KONTAK REAL JURAGAN TAPS</div>
+
+        <div class="menu">
+            <div class="card">
+                <div class="card-left">
+                    <div class="dot"></div>
+                    <span>SALURAN STOK JB JURAGAN TAPS</span>
+                </div>
+                <a href="https://whatsapp.com/channel/0029Vb6t9Xa0LKZLt8qHyY3R" class="btn">klik disini</a>
+            </div>
+            <div class="card">
+                <div class="card-left">
+                    <div class="dot"></div>
+                    <span>SALURAN JASAPOST JB JURAGAN TAPS</span>
+                </div>
+                <a href="https://whatsapp.com/channel/0029VbC0lHEICVfo89LM9I3e" class="btn">klik disini</a>
+            </div>
+
+            <div class="card">
+                <div class="card-left">
+                    <div class="dot"></div>
+                    <span>WA BELI AKUN</span>
+                </div>
+                <a href="https://wa.me/+6285178163343" class="btn">klik disini</a>
+            </div>
+
+            <div class="card">
+                <div class="card-left">
+                    <div class="dot"></div>
+                    <span>WA JUAL AKUN</span>
+                </div>
+                <a href="https://wa.me/+628987469419" class="btn">klik disini</a>
+            </div>
+
+            <div class="card">
+                <div class="card-left">
+                    <div class="dot"></div>
+                    <span>WA REKBER / JASAPOST</span>
+                </div>
+                <a href="https://wa.me/+6285881754942" class="btn">klik disini</a>
+            </div>
+
+            <div class="title">ALL GRUB JURAGAN TAPS</div>
+
+            <div class="card">
+                <div class="card-left">
+                    <div class="dot"></div>
+                    <span>STOK JURAGAN TAPS X OMLING #</span>
+                </div>
+                <a href="https://chat.whatsapp.com/D6sk4SqsDTP14cJzQiZ9aB" class="btn">klik disini</a>
+            </div>
+
+            <div class="card">
+                <div class="card-left">
+                    <div class="dot"></div>
+                    <span>STOK JURAGAN TAPS X OMLING #2</span>
+                </div>
+                <a href="https://chat.whatsapp.com/KOkV6T3OMGmJnklqGYdjBY" class="btn">klik disini</a>
+            </div>
+            
+             <div class="card">
+                <div class="card-left">
+                    <div class="dot"></div>
+                    <span>STOK JURAGAN TAPS #3</span>
+                </div>
+                <a href="https://chat.whatsapp.com/DyA00LZCBFuBgCAk0WGFQf" class="btn">klik disini</a>
+            </div>
+            
+             <div class="card">
+                <div class="card-left">
+                    <div class="dot"></div>
+                    <span>JB TERBUKA JURAGAN TAPS</span>
+                </div>
+                <a href="https://chat.whatsapp.com/CL32eurCyyhEh4mIESbkjX" class="btn">klik disini</a>
+            </div>
+        </div>
+    </div>
+
+    <!-- FOOTER -->
+    <div class="footer-bar">
+        <span>Copyright © 2025 JURAGAN TAPS INDONESIA</span>
+        <img src="logo.png" class="maskot" alt="Juragan Taps">
+    </div>
+
+</div>
+
 </body>
-</html>
+  </html>
