Update title in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Juragan Taps – Admin Free Fire & Grup</title>
+<title>Juragan Taps – Kontak Real & Grub Jb</title>
 
 <style>
 html, body{
