Enhance SEO and social media meta tags in index.html
Updated meta tags for SEO and social sharing.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,40 @@
 <html lang="id">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Juragan Taps – Kontak Real & Grub Jb</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">  
 
+<title>Juragan Taps – Kontak Real & Grub jual Beli</title> 
+
+<meta name="description" content="Juragan Taps adalah JB Mobile Legend & Free Fire terpercaya. Jual beli akun, Topup, dan layanan rekber aman & cepat.">  
+
+<meta name="keywords" content="Juragan Taps, JB Mobile Legend, JB Free Fire, JB ML terpercaya, JB FF terpercaya, jual akun ML, jual akun FF, joki Mobile Legend, joki Free Fire, rekber game">  
+
+<meta name="author" content="Juragan Taps">  <!-- Open Graph -->  <meta property="og:title" content="Juragan Taps – JB ML & FF Terpercaya">  
+
+<meta property="og:description" content="JB Mobile Legend & Free Fire terpercaya. Jual beli akun, joki, dan rekber resmi Juragan Taps.">  
+
+<meta property="og:image" content="https://juragantaps.vercel.app/logo.png">
+
+<meta property="og:url" content="https://juragantaps.vercel.app">  
+<meta property="og:type" content="website"> 
+<!-- Twitter --> 
+<meta name="twitter:card" content="summary_large_image">  
+<meta name="twitter:title" content="Juragan Taps – JB ML & FF Terpercaya">  
+<meta name="twitter:description" content="JB Mobile Legend & Free Fire terpercaya dari Juragan Taps.">  
+<meta name="twitter:image" content="https://juragantaps.vercel.app/logo.png">  
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>  <script type="application/ld+json">  
+{  
+  "@context": "https://schema.org",  
+  "@type": "Organization",  
+  "name": "Juragan Taps",  
+  "url": "https://juragantaps.vercel.app",  
+  "description": "JB Mobile Legend dan Free Fire terpercaya, jual beli akun, jasa joki, dan rekber.",  
+  "sameAs": [  
+    "https://instagram.com/juragan_taps",  
+    "https://wa.me/+6285178163343"  
+  ]  
+}  
 <style>
 html, body{
     height:100%;
@@ -290,4 +321,4 @@ body{
 </div>
 
 </body>
-  </html>
+</html>
