Update Open Graph and Twitter image URLs

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <meta property="og:description" content="JB Mobile Legend & Free Fire terpercaya. Jual beli akun, joki, dan rekber resmi Juragan Taps.">  
 
-<meta property="og:image" content="https://juragantaps.vercel.app/logo.png">
+<meta property="og:image" content="https://raw.githubusercontent.com/yamzzreal/JURAGAN-TAPS/refs/heads/main/20251217_131913.jpg">
 
 <meta property="og:url" content="https://juragantaps.vercel.app">  
 <meta property="og:type" content="website"> 
@@ -22,7 +22,7 @@
 <meta name="twitter:card" content="summary_large_image">  
 <meta name="twitter:title" content="Juragan Taps – JB ML & FF Terpercaya">  
 <meta name="twitter:description" content="JB Mobile Legend & Free Fire terpercaya dari Juragan Taps.">  
-<meta name="twitter:image" content="https://juragantaps.vercel.app/logo.png">  
+<meta name="twitter:image" content="https://raw.githubusercontent.com/yamzzreal/JURAGAN-TAPS/refs/heads/main/20251217_131913.jpg">  
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>  <script type="application/ld+json">  
 {  
