Enhance pay.html with Open Graph and Twitter meta tags
Added Open Graph and Twitter meta tags for better sharing.

--- a/pay.html
+++ b/pay.html
@@ -4,6 +4,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
   <title>All Payment Juragan Taps</title>
+  <!-- Open Graph -->
+  <meta property="og:title" content="Juragan Taps" />
+  <meta property="og:description" content="All Payment Juragan Taps – Aman & Cepat" />
+  <meta property="og:image" content="https://yamzzoffc.my.id/bannerTaps.jpg" />
+  <meta property="og:url" content="https://juragantaps.vercel.app/pay.html" />
+  <meta property="og:type" content="website" />
+
+  <!-- Optional (Twitter/X) -->
+  <meta name="twitter:card" content="summary_large_image">
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;500;700&display=swap" rel="stylesheet">
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
